--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ colorama==0.4.6
 crispy-bootstrap4==2024.1
 Django==5.0.6
 django-crispy-forms==2.1
+django-debug-toolbar==4.3.0
+Faker==25.2.0
 flake8==7.0.0
 gunicorn==22.0.0
 mccabe==0.7.0
@@ -22,4 +24,3 @@ six==1.16.0
 sqlparse==0.5.0
 tzdata==2024.1
 whitenoise==6.6.0
-
